chore: redirect to cv page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="refresh" content="0;URL=http://ben-barbier.github.io/cv/">
+  <title>ben-barbier.github.io</title>
+</head>
+<body>
+  <a href="http://ben-barbier.github.io/cv/">http://ben-barbier.github.io/cv/</a>
+</body>
+</html>
